Alteração no model Trabalho, tornando campo status uma enumeracao
* Nova constante adicionada na enumeracao Avaliacao
* Correcao de templates para usar a comparacao baseado nas constantes e
nao em string
* Novo fragment para mostrar badges de status baseados na enum
* Alteracoes nos metodos de avaliar status para refletir o uso da enum
* Tornando o link do dashboard protegido

--- a/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
@@ -69,7 +69,7 @@
 						
 						<span th:if="${periodoInicial}">Submetido</span>
 						<span th:if="${periodoRevisao}">Em revisão</span>
-						<span th:if="${periodoFinal}" th:text="${trabalho.status} ? ${trabalho.status} : 'Não Revisado'">status</span>
+						<span th:if="${periodoFinal}" th:text="${trabalho.status} ? ${trabalho.status.descricao} : 'Não Revisado'">status</span>
 						
 					</p>
                               		
