--- a/aplicacao/contest/src/main/resources/templates/sessao/sessao_ver_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/sessao/sessao_ver_trabalhos.html
@@ -68,7 +68,7 @@
 				PARTICIPANTES</a>
 		</div>
 
-		<div th:if="${#lists.isEmpty(trabalhosSessao)}">
+		<div th:if="${#lists.isEmpty(sessao.trabalhos)}">
 			<h2 class="center">Não há trabalhos na sessão</h2>
 		</div>
 
@@ -82,26 +82,26 @@
 				</tr>
 			</thead>
 
-			<tbody th:each="participacao,count : ${trabalhosSessao}">
+			<tbody th:each="trabalho,count : ${sessao.trabalhos}">
 				<tr>
-					<td width="250" th:text="${participacao.pessoa.nome}"></td>
-					<td width="300" th:text="${participacao.trabalho.titulo}"></td>
-					<td width="100" th:text="${participacao.trabalho.trilha.nome}"></td>
+					<td width="250" th:text="${trabalho.autor.nome}"></td>
+					<td width="300" th:text="${trabalho.titulo}"></td>
+					<td width="100" th:text="${trabalho.trilha.nome}"></td>
 					<td width="100">
 						<input type="checkbox" th:id="|check${count.index}|"
-							th:onclick="|addPresenca(${participacao.trabalho.id})|"
+							th:onclick="|addPresenca(${trabalho.id})|"
 							name="statusApresentacao" th:checked="checked"
-							th:if="${participacao.trabalho.statusApresentacao}"
+							th:if="${trabalho.statusApresentacao}"
 						/>
 						<input type="checkbox" th:id="|check${count.index}|"
-							th:onclick="|addPresenca(${participacao.trabalho.id})|"
+							th:onclick="|addPresenca(${trabalho.id})|"
 							name="statusApresentacao"
-							th:unless="${participacao.trabalho.statusApresentacao}"
+							th:unless="${trabalho.statusApresentacao}"
 						/>
 						 <label 
 						class="black-text" th:for="|check${count.index}|"> </label></td>
 					<td><a
-						th:href="@{'/sessao/'+${sessao.id}+'/excluirTrabalho/'+${participacao.trabalho.id}}"
+						th:href="@{'/sessao/'+${sessao.id}+'/excluirTrabalho/'+${trabalho.id}}"
 						class="waves-effect btn-flat red accent-4 white-text"
 						id="btn_excluir_trabalho">Deletar<i
 							class="material-icons right">delete</i></a></td>
