--- a/aplicacao/contest/src/main/resources/templates/sessao/sessao_listar_sessoes.html
+++ b/aplicacao/contest/src/main/resources/templates/sessao/sessao_listar_sessoes.html
@@ -36,9 +36,9 @@
             </div>
            
             <div class="card-action">
-                <a th:href="@{'/sessao/ver/'+${sessao.id}}" class="orange-text accent-3">Ver Sessão</a>
-                <a th:href="@{'/sessao/excluir/'+${sessao.id}}"
-                class="orange-text accent-3 deleta_sessao">Deletar Sessão</a>
+                <a th:href="@{'/sessao/ver/'+${sessao.id}}" class="orange-text accent-3">Ver</a>
+                <a th:href="@{'/sessao/editar/'+${sessao.id}}" class="orange-text accent-3">Editar</a>
+                <a th:href="@{'/sessao/excluir/'+${sessao.id}}" class="orange-text accent-3 deleta_sessao">Excluir</a>
             </div>
         </div>
     </div>
