--- a/aplicacao/contest/src/main/resources/templates/sessao/sessao_listar_participantes.html
+++ b/aplicacao/contest/src/main/resources/templates/sessao/sessao_listar_participantes.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<div class="container page" align="center" style="text-align: center;">
-		<img src="/img/indice.png" height="100" /><br /> <font size="5">
+		<img th:src="@{/img/logo_EU_2017.png}" height="100" /><br /> <font size="5">
 			<b>UNIVERSIDADE FEDERAL DO CEARÁ</b>
 		</font><br /> <font size="4"> CAMPUS QUIXADÁ</font><br />
 		<br /> <font size="3"> <b
