Mandar email para todos autores principais quando seu trabalho é adicionado a uma seção

--- a/aplicacao/contest/src/main/resources/templates/sessao/sessao_ver_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/sessao/sessao_ver_trabalhos.html
@@ -66,6 +66,8 @@
 			<a th:href="@{'/sessao/listarParticipantes/'+ ${sessao.id}}"
 				class=" waves-effect btn-flat teal white-text" target="_blank">LISTAR
 				PARTICIPANTES</a>
+			<a th:href="@{'/sessao/enviarEmailParaAutores'}"
+				class="waves-effect btn-flat teal white-text row right" target="_blank">Enviar emails</a>
 		</div>
 
 		<div th:if="${#lists.isEmpty(sessao.trabalhos)}">
