--- a/aplicacao/contest/src/main/resources/templates/perfil.html
+++ b/aplicacao/contest/src/main/resources/templates/perfil.html
@@ -51,7 +51,7 @@
 						</div>
 
 						<div class="input-field">
-							<input type="number" id="cpf" name="cpf" th:field="*{cpf}"
+							<input type="text" id="cpf" name="cpf" th:field="*{cpf}"
 								placeholder="Exemplo: 11111111111" required="required"
 								disabled="disabled" /> <label for="cpf">*CPF</label>
 						</div>
