--- a/aplicacao/contest/src/main/resources/templates/fragments/organizador_menu_navegacao.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/organizador_menu_navegacao.html
@@ -27,6 +27,7 @@
 			<ul th:if="${evento}" id='dropdown1' class='dropdown-content'>
 				<li><a th:href="@{|/eventoOrganizador/gerarCertificadosOrganizador/${evento.id}|}">Dados da Organização</a></li>
 			  	<li><a th:href="@{|/eventoOrganizador/gerarCertificadosRevisores/${evento.id}|}">Dados dos Revisores</a></li>
+			  	<li><a th:href="@{|/eventoOrganizador/gerarCertificadosChefeSessao/${evento.id}|}">Dados dos Chefes de Sessão</a></li>
 			  	<li><a th:href="@{|/eventoOrganizador/gerarCertificadosTrabalho/${evento.id}|}">Dados dos Trabalhos</a></li>
 			  	
 			</ul>
